# retrospective-llm-eval

./: .env.template  .gitignore  README.md  convert_dataset.py  convert_dataset_new.py  evaluate.py  evaluate_dataset.py  generate_dataset.py  main.py  odd_one_out.py  odd_one_out_jacob_edit.py  pyproject.toml  requirements-dev.txt  requirements.dev.txt  requirements.txt  run_evaluations.py  run_evaluations.sh  truthfulqa_dataset.py  truthfulqa_evaluation.py
analysis/: main_plot.py
data/: crafted_dataset_calibrated.jsonl  created_dataset_unfiltered.jsonl  generated_dataset_calibrated.csv  generated_dataset_unfiltered.csv
datasets/: crafted_dataset_calibrated.jsonl  crafted_dataset_law_v1.csv  crafted_dataset_law_v4.csv  crafted_dataset_unfiltered.jsonl  generated_dataset_calibrated.csv  generated_dataset_unfiltered.csv
notebooks/: dataset-similiarities.ipynb  dataset-similiarities_fork-2.ipynb  dataset-similiarities_fork.ipynb  gen-data.ipynb  generate-survey-urls.ipynb  semantic-sims+dim-reduc.ipynb  semantic-sims+dim-reduc_may2.ipynb  semantic-sims+dim-reduc_non-adv.ipynb  semantic-sims+dim-reduc_v2.ipynb  similarities+dim-reduc.ipynb  train-propensity-score copy.ipynb  train-propensity-score-backup.ipynb  train-propensity-score.ipynb
runs/: run_crafted_law_babbage-002.txt  run_crafted_law_babbage-002_topk2.txt  run_crafted_law_davinci-002.txt  run_crafted_law_davinci-002_topk2.txt  run_crafted_law_gpt-3.5-turbo.txt  run_crafted_law_gpt-3.5-turbo_topk2.txt  run_crafted_law_gpt-4-turbo-2024-04-09.txt  run_crafted_law_gpt-4-turbo-2024-04-09_topk2.txt  (+9 more)
(+35 files in other folders)
