[tool.poetry]
name = "retrospective-llm-eval"
version = "0.1.0"
description = "Check whether public datasets have been games by newer models"
authors = ["Lucie Philippon <lucie.philippon@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.15.0"
litellm = "^1.7.5"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ipywidgets = "^8.1.1"
jupyterlab = "^4.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
